# ai-agent-practice

./: AGENTS.md  README.md
agent/: behavior.md  system.md
docs/: AGENT_SPEC.md
hotel-agent/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
hotel-agent/config/: config.example.yaml
hotel-agent/src/hotel_agent/: __init__.py  main.py
hotel-agent/src/hotel_agent/api/: routes.py  schemas.py
hotel-agent/src/hotel_agent/connectors/: __init__.py  base.py  tripadvisor.py
hotel-agent/src/hotel_agent/core/: settings.py
hotel-agent/src/hotel_agent/loop/: __init__.py  planner.py  router.py  types.py
hotel-agent/tests/: test_editor_page.py  test_health.py  test_search_contract.py
memory/: long_term.md
tasks/: README.md
